Fixed some scroll issues and wrapping on discipline

--- a/src/components/discipline/discipline.scss
+++ b/src/components/discipline/discipline.scss
@@ -1,3 +1,8 @@
+.discipline-wrapper {
+    width: 100%;
+    
+}
+
 .discipline-container {
     display: flex;
     flex-direction: column;
@@ -29,6 +34,16 @@
 
 .label-box {
     padding-right: 1em;
+}
+
+.timetable-box {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    flex-wrap: wrap;
+    align-items: center;
+    max-height: 200px;
+    overflow-y: auto;
 }
 
 .row {
