--- a/src/components/institution-edit/institution-edit.scss
+++ b/src/components/institution-edit/institution-edit.scss
@@ -1,4 +1,4 @@
-.institution-container {
+.institution-container__edit {
     margin-top: 2em;
     display: flex;
     flex-direction: column;
